--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
   <header>
     <nav class="navbar">
-      <a href="#" class="logo">Mi Portfolio</a>
+      <a href="#" class="logo">Bios Portfolio</a>
       <ul class="menu">
         <li class="menu-item">
           <a href="#home">Inicio</a>
         </li>
         <li class="menu-item">
-          <a href="#about">Sobre mí</a>
+          <a href="#about">Acerca de...</a>
         </li>
         <li class="menu-item">
           <a href="#projects">Experiencia</a>
@@ -32,13 +32,13 @@
   <section id="home" class="content">
     <div class="half-section">
      <div class="avatar-container">
-      <img src="./assets/avatar.png" alt="">
-      <h3>"Yo, disfrutando de mi café..."</h3>
+      <img src="./assets/bios.jpg" alt=" biosLogo">
+      <h3>"Bienvenidos a la Wev de Bios Informatica"</h3>
      </div>
     </div>
     <div class="half-section text-section">
       <div class="introduction">
-        <h1 class="title">Hello my friends!, <br> Soy Anibal Dario Chato Zavoluk </h1>
+        <h1 class="title">Hello my friends!, <br> Somos Bios Informatica!! </h1>
         <ul class="socials">
           <li><a class="socials-icon" href=""><i class="bi bi-github"></i></a></li>
           <li><a class="socials-icon" href=""><i class="bi bi-linkedin"></i></a></li>
@@ -49,27 +49,20 @@
   
         <p class="description">+15 años de experiencia trabajando en aplicaciones de alta escala. <br> Déjame contarte un poco de mí, sigue deslizando!</p>
       </div>
-
     </div>
   </section>
   
   <section id="about" class="content">
     <aside class="half-section text-section">
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem sint porro reiciendis debitis et harum animi rem fugit eaque. Officia maxime id ipsum culpa temporibus dolore saepe quos quasi debitis.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quisquam rem quam, corporis itaque dolor deserunt libero doloremque quibusdam repellat quidem doloribus quia eos officia placeat, quasi, odit repellendus ipsa.
+        Bios informatica es una empresa que se desarrolla desde la provincia de Jujuy para el mundo.
       </p>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolore esse a officiis autem sint harum quos rerum neque aut, totam itaque iure perferendis vitae reiciendis praesentium corporis saepe consectetur.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati veniam, deleniti rem, neque ipsum eos ullam distinctio, atque harum perferendis itaque ipsam labore voluptatibus. Maiores provident perspiciatis sunt mollitia impedit.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolore esse a officiis autem sint harum quos rerum neque aut, totam itaque iure perferendis vitae reiciendis praesentium corporis saepe consectetur.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati veniam, deleniti rem, neque ipsum eos ullam distinctio, atque harum perferendis itaque ipsam labore voluptatibus. Maiores provident perspiciatis sunt mollitia impedit.
+        Nos especializamos en el desarrollo de aplicaciones de escritorio para gestion de Pequeñas y Medianas empresa.
       </p>
     </aside>
     <aside class="half-section title-section">
-      <h2>Un poco sobre mí</h2>
+      <h2>Acerca de Nosotros</h2>
     </aside>
   </section>
 
@@ -80,27 +73,25 @@
     <aside class="half-section text-section">
         <ul class="project-list">
           <li>
-            <h3>Proyecto 1</h3>
+            <h3>Sistema de Gestion de bares</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Quisquam, quidem, quisquam.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit architecto sapiente itaque eius voluptate! Nisi voluptas explicabo quaerat? Alias perspiciatis vel praesentium adipisci impedit? Commodi harum repellat eum beatae dolorum.
+              Sistema completa para gestionar el funcionamiento de un bar diseñado inicialmente para la pizzeria tio bigote
+              , con la posibilidad de ser adaptado para otras actividades similaer.
             </p>
             <a class="project-link" href="#"><i class="bi bi-github"></i> Ver más</a>
           </li>
           <li>
-            <h3>Proyecto 2</h3>
+            <h3>Sistema de escritorio para internaciones domiciliarias</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Quisquam, quidem, quisquam.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit architecto sapiente itaque eius voluptate! Nisi voluptas explicabo quaerat? Alias perspiciatis vel praesentium adipisci impedit? Commodi harum repellat eum beatae dolorum.
+              Desarrollado para la empresa Huasi Salud permitiendo gestionar los pacientes y las Ordenes de trabajando
+              correspondientes a cada uno de ellos.
             </p>
             <a class="project-link" href="#"><i class="bi bi-github"></i> Ver más</a>
           </li>
           <li>
-            <h3>Proyecto 3</h3>
+            <h3>Sistema Web Centro de Empleados de comercio</h3>
             <p>
-              Desarrollo de proyecto integrador en VSCode
+              Utilizado para carga de declaraciones juradas de todas los comercios de la provincia de jujuy.
             </p>
             <a class="project-link" href="#"><i class="bi bi-github"></i> Ver más</a>
           </li>
@@ -119,7 +110,7 @@
         <input class="btn-send-message" type="submit" value="Enviar">
     </aside>
     <aside class="half-section title-section">
-      <h2>Envíame un mensaje y charlemos!</h2>
+      <h2>Envíanos un mensaje para contactarnos, te esperamos !!</h2>
     </aside>
   </section>
 
@@ -135,7 +126,7 @@
     </div>
       <div class="footer-section-container">
         <p>
-          &copy; 2022 - <a class="footer-link" href="https://www.linkedin.com">Nombre y Apellido</a>
+          &copy; 2022 - <a class="footer-link" href="https://www.linkedin.com">Anibal Dario Zavoluk By BIOS INFORMATICA</a>
         </p>
       </div>
   </footer>
