agrego git ignore

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="introduction">
         <h1 class="title">Hello my friends!, <br> Somos Bios Informatica!! </h1>
         <ul class="socials">
-          <li><a class="socials-icon" href=""><i class="bi bi-github"></i></a></li>
+          <li><a class="socials-icon" href="https://github.com/zavolukadg/portfoliotemplate" target="_blank"><i class="bi bi-github"></i></a></li>
           <li><a class="socials-icon" href=""><i class="bi bi-linkedin"></i></a></li>
           <li><a class="socials-icon" href=""><i class="bi bi-twitter"></i></a></li>
           <li><a class="socials-icon" href=""><i class="bi bi-facebook"></i></a></li>
