--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
   <title>Mi Portfolio</title>
 </head>
+
 <body>
   <header>
     <nav class="navbar">
@@ -23,6 +25,9 @@
           <a href="#projects">Experiencia</a>
         </li>
         <li class="menu-item">
+          <a href="#technologies">Tecnologías</a>
+        </li>
+        <li class="menu-item">
           <a href="#contact">Contacto</a>
         </li>
       </ul>
@@ -31,27 +36,29 @@
 
   <section id="home" class="content">
     <div class="half-section">
-     <div class="avatar-container">
-      <img src="./assets/bios.jpg" alt=" biosLogo">
-      <h3>"Bienvenidos a la Wev de Bios Informatica"</h3>
-     </div>
+      <div class="avatar-container">
+        <img src="./assets/bios.jpg" alt=" biosLogo">
+        <h3>"Bienvenidos a la Wev de Bios Informatica"</h3>
+      </div>
     </div>
     <div class="half-section text-section">
       <div class="introduction">
         <h1 class="title">Hello my friends!, <br> Somos Bios Informatica!! </h1>
         <ul class="socials">
-          <li><a class="socials-icon" href="https://github.com/zavolukadg/portfoliotemplate" target="_blank"><i class="bi bi-github"></i></a></li>
+          <li><a class="socials-icon" href="https://github.com/zavolukadg/portfoliotemplate" target="_blank"><i
+                class="bi bi-github"></i></a></li>
           <li><a class="socials-icon" href=""><i class="bi bi-linkedin"></i></a></li>
           <li><a class="socials-icon" href=""><i class="bi bi-twitter"></i></a></li>
           <li><a class="socials-icon" href=""><i class="bi bi-facebook"></i></a></li>
           <li><a class="socials-icon" href=""><i class="bi bi-instagram"></i></a></li>
         </ul>
-  
-        <p class="description">+15 años de experiencia trabajando en aplicaciones de alta escala. <br> Déjame contarte un poco de mí, sigue deslizando!</p>
+
+        <p class="description">+15 años de experiencia trabajando en aplicaciones de alta escala. <br> Déjame contarte
+          un poco de mí, sigue deslizando!</p>
       </div>
     </div>
   </section>
-  
+
   <section id="about" class="content">
     <aside class="half-section text-section">
       <p>
@@ -71,47 +78,99 @@
       <h2>Experiencia en el campo</h2>
     </aside>
     <aside class="half-section text-section">
-        <ul class="project-list">
-          <li>
-            <h3>Sistema de Gestion de bares</h3>
-            <p>
-              Sistema completa para gestionar el funcionamiento de un bar diseñado inicialmente para la pizzeria tio bigote
-              , con la posibilidad de ser adaptado para otras actividades similaer.
-            </p>
-            <a class="project-link" href="#"><i class="bi bi-github"></i> Ver más</a>
-          </li>
-          <li>
-            <h3>Sistema de escritorio para internaciones domiciliarias</h3>
-            <p>
-              Desarrollado para la empresa Huasi Salud permitiendo gestionar los pacientes y las Ordenes de trabajando
-              correspondientes a cada uno de ellos.
-            </p>
-            <a class="project-link" href="#"><i class="bi bi-github"></i> Ver más</a>
-          </li>
-          <li>
-            <h3>Sistema Web Centro de Empleados de comercio</h3>
-            <p>
-              Utilizado para carga de declaraciones juradas de todas los comercios de la provincia de jujuy.
-            </p>
-            <a class="project-link" href="#"><i class="bi bi-github"></i> Ver más</a>
-          </li>
-        </ul>
+      <ul class="project-list">
+        <li>
+          <h3>Sistema de Gestion de bares</h3>
+          <p>
+            Sistema completa para gestionar el funcionamiento de un bar diseñado inicialmente para la pizzeria tio
+            bigote
+            , con la posibilidad de ser adaptado para otras actividades similaer.
+          </p>
+          <a class="project-link" href="#"><i class="bi bi-github"></i> Ver más</a>
+        </li>
+        <li>
+          <h3>Sistema de escritorio para internaciones domiciliarias</h3>
+          <p>
+            Desarrollado para la empresa Huasi Salud permitiendo gestionar los pacientes y las Ordenes de trabajando
+            correspondientes a cada uno de ellos.
+          </p>
+          <a class="project-link" href="#"><i class="bi bi-github"></i> Ver más</a>
+        </li>
+        <li>
+          <h3>Sistema Web Centro de Empleados de comercio</h3>
+          <p>
+            Utilizado para carga de declaraciones juradas de todas los comercios de la provincia de jujuy.
+          </p>
+          <a class="project-link" href="#"><i class="bi bi-github"></i> Ver más</a>
+        </li>
+      </ul>
     </aside>
   </section>
+
+  <section id="technologies" class="content">
+    <aside class="half-section text-section">
+       <div class="tech-icons-container">
+          <ul class="tech-icon-list">
+            <li class="tech-icon-item">
+              <img height="120px" width="auto" src="./assets/tech-icons/icon-git.svg" alt="Git Icon">
+              <span>Git</span>
+            </li>
+            <li class="tech-icon-item">
+              <img height="120px" width="auto" src="./assets/tech-icons/icon-github.svg" alt="GitHub Icon">
+              <span>GitHub</span>
+            </li>
+            <li class="tech-icon-item-end">
+              <img height="120px" width="auto" src="./assets/tech-icons/icon-html.svg" alt="HTML Icon">
+              <span>HTML</span>
+            </li>
+          </ul>
+          <ul class="tech-icon-list">
+            <li class="tech-icon-item">
+              <img height="120px" width="auto" src="./assets/tech-icons/icon-css.svg" alt="CSS Icon">
+              <span>CSS</span>
+            </li>
+            <li class="tech-icon-item">
+              <img height="120px" width="auto" src="./assets/tech-icons/icon-js.svg" alt="JavaScript Icon">
+              <span>JavaScript</span>
+            </li>
+            <li class="tech-icon-item-end">
+              <img height="120px" width="auto" src="./assets/tech-icons/icon-react.svg" alt="ReactJS Icon">
+              <span>React</span>
+            </li>
+          </ul>
+          <ul class="tech-icon-list-end">
+            <li class="tech-icon-item">
+              <img height="120px" width="auto" src="./assets/tech-icons/icon-nodejs.svg" alt="NodeJS Icon">
+              <span>NodeJS</span>
+            </li>
+            <li class="tech-icon-item">
+              <img height="120px" width="auto" src="./assets/tech-icons/icon-postgresql.svg" alt="PostgreSQL Icon">
+              <span>PostgreSQL</span>
+            </li>
+          </ul>
+       </div>
+    </aside>
+    <aside class="half-section title-section">
+      <h2>Tecnologías que manejo</h2>
+    </aside>
+  </section>
+
   <section id="contact" class="content">
+    <aside class="half-section title-section">
+      <h2>Envíanos un mensaje para contactarnos, te esperamos !!</h2>
+    </aside>
+
     <aside class="half-section text-section">
       <form action="">
         <label for="name">Nombre</label>
         <input class="input-field" type="text" name="name" id="name">
         <label for="email">Email</label>
-        <input class="input-field type="email" name="email" id="email">
+        <input class="input-field type=" email" name="email" id="email">
         <label for="message">Mensaje</label>
         <textarea class="input-field" name="message" id="message" cols="30" rows="10"></textarea>
         <input class="btn-send-message" type="submit" value="Enviar">
     </aside>
-    <aside class="half-section title-section">
-      <h2>Envíanos un mensaje para contactarnos, te esperamos !!</h2>
-    </aside>
+    
   </section>
 
   <footer>
@@ -124,11 +183,13 @@
         <li><a class="socials-icon" href=""><i class="bi bi-instagram"></i></a></li>
       </ul>
     </div>
-      <div class="footer-section-container">
-        <p>
-          &copy; 2022 - <a class="footer-link" href="https://www.linkedin.com">Anibal Dario Zavoluk By BIOS INFORMATICA</a>
-        </p>
-      </div>
+    <div class="footer-section-container">
+      <p>
+        &copy; 2022 - <a class="footer-link" href="https://www.linkedin.com">Anibal Dario Zavoluk By BIOS
+          INFORMATICA</a>
+      </p>
+    </div>
   </footer>
 </body>
+
 </html>
